# cybros-network

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  pallet-weight-template.hbs  rust-toolchain  rust-toolchain.toml
agents/deno/: main.ts  run.sh
docker/: build_faucet_backend.sh  build_node_from_local.sh  faucet-backend.Dockerfile  node.Dockerfile
docs/: faucet.docker-compose.yml.example  guides.md  how-to.md  ideas.md  node.docker-compose.yml.example  offchain_computing_protocol.md  quick-start.md  workers_lifecycle.excalidraw
docs/.vitepress/: config.js
misc/: decrypt_test_output.ts  gen_test_input.ts  message_utils.ts  test.ts  test_message_utils.ts  tweetnacl.ts
node/: Cargo.toml
node/res/: development_chain_profile.json  local_chain_profile.json
node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/computing_cluster/: Cargo.toml  README.md
pallets/computing_cluster/src/: benchmarking.rs  lib.rs  types.rs
pallets/computing_clusters/: Cargo.toml
pallets/computing_clusters/primitives/: Cargo.toml  README.md
pallets/computing_clusters/src/: benchmarking.rs  lib.rs  mock.rs
pallets/computing_workers/: Cargo.toml  README.md
pallets/computing_workers/primitives/: Cargo.toml  README.md
pallets/computing_workers/primitives/src/: lib.rs
pallets/computing_workers/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/device_id/: Cargo.toml
pallets/device_id/src/: benchmarking.rs  common_functions.rs  impl_nonfungibles.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/device_ids/: Cargo.toml  README.md
pallets/device_ids/runtime-api/: Cargo.toml  README.md
pallets/device_ids/src/: benchmarking.rs  lib.rs  tests.rs  types.rs
pallets/fake_computing/: Cargo.toml
pallets/fake_computing/src/: lib.rs  mock.rs
pallets/fake_offchain_computing/: Cargo.toml  README.md
pallets/fake_offchain_computing/src/: lib.rs  mock.rs
pallets/nft_computing/: Cargo.toml  README.md
pallets/nft_computing/primitives/: Cargo.toml  README.md
pallets/nft_computing/src/: lib.rs  mock.rs  tests.rs
pallets/offchain_computing/: Cargo.toml  README.md
pallets/offchain_computing/primitives/: Cargo.toml  README.md
pallets/offchain_computing/src/: lib.rs  macros.rs  mock.rs
pallets/offchain_computing_infra/: Cargo.toml
pallets/offchain_computing_infra/primitives/: Cargo.toml
pallets/offchain_computing_infra/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
pallets/offchain_computing_pool/: Cargo.toml
pallets/offchain_computing_pool/primitives/: Cargo.toml
pallets/offchain_computing_workers/: Cargo.toml  README.md
pallets/pool_computing/: Cargo.toml  README.md
pallets/pool_computing/primitives/: Cargo.toml  README.md
pallets/pool_computing/primitives/src/: lib.rs
pallets/simple_computing/: Cargo.toml  README.md
pallets/simple_computing/primitives/: Cargo.toml  README.md
pallets/simple_computing/primitives/src/: lib.rs
pallets/simple_computing/src/: lib.rs  mock.rs  traits.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
protocol_impl/: README.md  deno.jsonc  main.ts  run.sh  run_and_keep_alive.sh
protocol_impl/task_executor/: .env.defaults  deno.json  lock.file  main.ts  message_utils.ts  tweetnacl.ts
runtime/: Cargo.toml
runtime-primitives/: Cargo.toml
runtime-primitives/src/: lib.rs
runtime/primitives/: Cargo.toml
runtime/primitives/src/: lib.rs
runtime/src/: lib.rs  migrations.rs  test.rs
runtime/src/pallet_configs/: aura.rs  balances.rs  computing_workers.rs  grandpa.rs  insecure_randomness_collective_flip.rs  message_queue.rs  mod.rs  multisig.rs  nft_computing.rs  nfts.rs  offchain_computing.rs  offchain_computing_workers.rs  pool_computing.rs  pov.rs  proxy.rs  randomness_collective_flip.rs  simple_computing.rs  sudo.rs  system.rs  timestamp.rs  transaction_payment.rs  vesting.rs
runtimes/origin/: Cargo.toml
runtimes/primal/: Cargo.toml
scripts/: benchmark_computing_workers.sh  docker_run.sh
squid/: .env.example  Dockerfile  FAQ.md  Makefile  commands.json  docker-compose.yml  package-lock.json  package.json  schema.graphql  squid.yaml  tsconfig.json  typegen.json
squid/archive/: docker-compose.yml
squid/src/: config.ts  entity_manager.ts  entity_managers.ts  index.ts  main.ts  processor.ts  utils.ts
statescan/: .env.example  README.md  docker-compose.yml
statescan/archiver/: Dockerfile
statescan/backend/: Dockerfile  ecosystem.config.js
statescan/website/: Dockerfile  ecosystem.config.js
templates/: pallet-weight-template.hbs
testnet-faucet/: package-lock.json  package.json
testnet-faucet-ui/: package-lock.json  package.json
testnet-faucet-ui/tests/: cybros.test.ts
tools/: build_faucet_backend_docker_image.sh  build_node_docker_image_from_local.sh  run_benchmarks.sh
vendors/node-inspect/: Cargo.toml
worker/: Cargo.toml  README.md  build.rs
worker/src/: chain.rs  cli.rs  command.rs  main.rs
worker/src/cli/: arg_enums.rs  config.rs  error.rs  mod.rs  runner.rs
worker/src/cli/commands/: mod.rs  run_cmd.rs  utils.rs
worker/src/cli/params/: keystore_params.rs  mod.rs  shared_params.rs
worker/src/framework/: mod.rs
worker/src/framework/cli/: arg_enums.rs  config.rs  error.rs  mod.rs  runner.rs
worker/src/framework/cli/commands/: mod.rs  run_cmd.rs
worker/src/framework/cli/params/: mod.rs  shared_params.rs
worker/src/framework/service/: config.rs  metrics.rs  mod.rs
worker/src/framework/service/task_manager/: mod.rs  tests.rs
worker/src/framework/tracing/logging/: directives.rs  event_format.rs  mod.rs
worker/src/framework/tracing/logging/layers/: prefix_layer.rs
worker/src/service/: builder.rs  config.rs  error.rs  mod.rs
worker/src/service/task_manager/: mod.rs  tests.rs
worker/src/services/: chain_sync.rs  mod.rs
worker/src/tracing/: mod.rs
worker/src/tracing/logging/: directives.rs  event_format.rs  mod.rs
worker/src/tracing/logging/layers/: prefix_layer.rs
(+143 files in other folders)
