[profile.release]
panic = "unwind"
opt-level = 3

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1 # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true

[workspace.package]
authors = ["Jasl <https://github.com/jasl>"]
homepage = "https://github.com/jasl/cybros-network"
repository = "https://github.com/jasl/cybros-network"

[workspace]
resolver = "2"
members = [
    "node",
    "runtime",
    "runtime/primitives",
    "pallets/*",
    "worker",
]
exclude = [
    "vendor",
]

[patch.crates-io]
# I know this is bad but there's `zeroize` version conflict between `vodozemac` and `substrate`
x25519-dalek = { path = "vendor/x25519-dalek" }
