[package]
name = "worker"
version = "0.0.1-dev"
description = "A prototype implementation of worker"
authors = ["Jasl <https://github.com/jasl>"]
homepage = "https://github.com/jasl/research-node/"
repository = "https://github.com/jasl/research-node/"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.57"
log = "0.4.1"
clap = { version = "4.0.32", features = ["derive"] }
deno_runtime = "0.91.0"
vodozemac = { git = "https://github.com/matrix-org/vodozemac.git" }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.23.1", features = ["full"] }
redb = "0.11.0"
scale-codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "full", "bit-vec"] }
subxt = { version = "0.25.0" }
