[package]
name = "cybros-worker"
version = "0.0.1-dev"
description = "A prototype implementation of Cybros computing worker"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
edition = "2021"
publish = false

build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
# Common
log = "0.4.17"
thiserror = "1.0.38"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.24.0", features = ["full"] }
subxt = { version = "0.26.0" }
scale-codec = { package = "parity-scale-codec", version = "3.3.0", features = ["derive", "full", "bit-vec"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["full_crypto"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Tracing
ansi_term = { package = "nu-ansi-term", version = "0.46" }
atty = "0.2.13"
chrono = "0.4.19"
lazy_static = "1.4.0"
libc = "0.2.121"
once_cell = "1.8.0"
parking_lot = "0.12.1"
regex = "1.6.0"
rustc-hash = "1.1.0"
tracing = "0.1.29"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.2.25", features = ["parking_lot"] }
url = "2.3.1"

# Service
pin-project = "1.0.12"
prometheus = { version = "0.13.3", default-features = false }
tracing-futures = { version = "0.2.4" }
dyn-clonable = { version = "0.9.0"}
tempfile = "3.1.0"
directories = "4.0.1"
static_init = "1.0.3"
futures = "0.3.21"
exit-future = "0.2.0"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "master" }
sc-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

# CLI
clap = { version = "4.1.1", features = ["derive", "string"] }
array-bytes = "6.0.0"
fdlimit = "0.2.1"
sp-panic-handler = { git = "https://github.com/paritytech/substrate", branch = "master" }

# Worker
schnorrkel = "0.9.1"
redb = "0.13.0"
deno_core = "0.171.0"
deno_runtime = "0.97.0"
vodozemac = { git = "https://github.com/matrix-org/vodozemac.git" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "master" }
runtime-primitives = { package = "cybros-primal-runtime-primitives", path = "../runtime/primitives" }
pallet-computing_workers-primitives = { path = "../pallets/computing_workers/primitives" }

[dev-dependencies]
# CLI
futures-timer = "3.0.1"
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "master" }
