[package]
name = "pallet-fake_computing"
version = "0.0.1-dev"
description = "Substrate pallet to providing fake computing jobs, this is a test-only pallet for pallet-computing_workers"
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.17", default-features = false }

scale-codec = { package = "parity-scale-codec", version = "3.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

pallet-computing_workers = { path = "../computing_workers", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }

pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"log/std",
	"scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-computing_workers/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-computing_workers/try-runtime",
]
