[package]
name = "pallet-simple_computing-primitives"
version = "0.0.1-dev"
description = "A crate that hosts a common definitions that are relevant for the pallet-simple_computing."
authors.workspace = true
repository.workspace = true
license = "Apache-2.0"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { package = "parity-scale-codec", version = "3.3.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"frame-support/std",
]
